sumo/tests/duarouter/flows/errors/vehicle_empty_departlane/errors.duarouter
Error: Attribute 'departLane' in definition of a flow is empty.
Error: Invalid departLane definition for flow '0';
 must be one of ("random", "free", "allowed", "best", or an int>=0)
Quitting (on error).
